@@ -29,6 +29,8 @@
 -59
 ? check(intnum(x=[0,-1/2],1,1/sqrt(x)),2)
 -oo
+? check(intnum(x=[0,-1/2],[oo,-3/2],1/(sqrt(x)+x^(3/2))),Pi)
+-oo
 ? check(intnum(x=0,[oo,1],sin(x)/x),Pi/2)
 -2
 ? check(intnum(x=0,[oo,-I],sin(x)/x),Pi/2)
@@ -132,4 +134,4 @@
   ***   Warning: integral from -oo to -oo.
 0
 ? print("Total time spent: ",gettime);
-Total time spent: 5716
+Total time spent: 5720
