@@ -18,6 +18,9 @@ check(intnum(x = 0, [oo,1],  f(x)), Euler)
 check(intnum(x = 0, [oo,1],  g(x)), Euler)
 check(intnum(x = 0, 1,  1/sqrt(x)), 2)
 check(intnum(x = [0,-1/2], 1,  1/sqrt(x)), 2)
+
+check(intnum(x = [0,-1/2], [oo,-3/2],  1/(sqrt(x)+x^(3/2))), Pi)
+
 check(intnum(x = 0, [oo,1], sin(x)/x), Pi/2)
 check(intnum(x = 0, [oo,-I], sin(x)/x), Pi/2)
 check(intnum(x = 0, [oo,-2*I], sin(2*x)/x), Pi/2)
